Update AIDataProvider.java